# StateCode

./: .env.example  .gitignore  README.md  package.json  run-statecode.bat  stop-statecode.bat  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/api/: README.md  package.json
apps/api/src/: main.ts
apps/auth-rs/: Cargo.toml  build.rs  package.json
apps/auth-rs/data/: smoke-users.json
apps/auth-rs/src/: config.rs  main.rs  models.rs  rating.rs  security.rs  service.rs  store.rs
apps/executor-rs/: Cargo.toml  README.md  package.json
apps/executor-rs/src/: main.rs
apps/web/: README.md  next.config.ts  package.json  tsconfig.tsbuildinfo
apps/worker/: README.md  package.json
apps/worker/src/: main.ts
docs/: README.md
docs/adr/: 0001-monorepo-layout.md
docs/api/: README.md  admin.md  auth.md  problems.md  submissions.md
docs/architecture/: README.md  data-flow.md  runtime-topology.md  state-and-storage.md  system-context.md
docs/runbooks/: README.md  admin-operations.md  auth-service-incident.md  local-development.md  submission-pipeline-check.md
infra/: README.md
infra/docker/: README.md  docker-compose.local.yml
infra/k8s/: README.md
infra/k8s/base/: README.md
infra/terraform/: README.md
scripts/: README.md  smoke-admin.ps1
scripts/bootstrap/: README.md  setup.ps1
scripts/dev/: README.md  _statecode-test-helpers.ps1  run-api-e2e.ps1  run-web-e2e.ps1  start-test-stack.ps1  stop-test-stack.ps1
scripts/release/: README.md
tests/: README.md
tests/e2e/: README.md  helpers.py
tests/fixtures/: README.md
(+49 files in other folders)
