[package]
name = "auth-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5"
prost = "0.13"
rand_core = { version = "0.6", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync"] }
tonic = { version = "0.12", features = ["transport"] }
uuid = { version = "1", features = ["v4", "serde"] }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"
